--- a/.github/workflows/sonarqube/action.yaml
+++ b/.github/workflows/sonarqube/action.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - master
+      - main
       - develop
       - "releases/**"
   pull_request:
@@ -20,7 +20,7 @@ jobs:
           fetch-depth: 0
 
       - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
+        uses: sonarsource/sonarqube-scan-action@main
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
