pip install pytest in action

--- a/.github/actions/python/pytest/action.yaml
+++ b/.github/actions/python/pytest/action.yaml
@@ -45,6 +45,7 @@ runs:
     run: |
       python -m venv ./.venv
       source ./.venv/bin/activate
+      python -m pip install pytest
       python -m pip install -r ${{ inputs.requirements_file }}
 
   # Linters
