--- a/.github/workflows/ci-nodejs.yaml
+++ b/.github/workflows/ci-nodejs.yaml
@@ -14,6 +14,9 @@ jobs:
     strategy:
       matrix:
         version: [16, 17, 18]
+    defaults:
+      run:
+        shell: bash
     steps:
       - name: Checkout code (including tags)
         uses: actions/checkout@v3
