--- a/.github/actions/nodejs/npm-test/action.yaml
+++ b/.github/actions/nodejs/npm-test/action.yaml
@@ -43,11 +43,13 @@ runs:
   - name: Install Dependencies
     if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
     shell: bash
-    run: npm install ${{ inputs.force_install_dependencies && '--force' || '' }}
+    working-directory: ${{ inputs.package_json_path }}
+    run: npm install ${{ inputs.force_install_dependencies == true && '--force' || '' }}
 
   - name: Run tests
     id: test
     shell: bash
+    working-directory: ${{ inputs.package_json_path }}
     run: |
       ${{ inputs.test_command }}
       echo "test_result=${{ job.status }}" >> $GITHUB_OUTPUT
