--- a/.github/actions/python/pytest/action.yaml
+++ b/.github/actions/python/pytest/action.yaml
@@ -39,14 +39,25 @@ runs:
       restore-keys: |
         ${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-venv-
 
-  - name: Install dependencies
+  - name: Set up virtualenv
     if: steps.cache-venv.outputs.cache-hit != 'true'
     shell: bash
     run: |
       python -m venv ./.venv
       source ./.venv/bin/activate
-      python -m pip install pytest
-      python -m pip install -r ${{ inputs.requirements_file }}
+
+  - name: Install dependencies
+    run: |
+      python -m pip install --upgrade pip
+      pip install ruff pytest
+      if [ -f ${{ inputs.requirements_file }} ]; then pip install -r ${{ inputs.requirements_file }}; fi
+
+  - name: Lint with ruff
+    run: |
+      # stop the build if there are Python syntax errors or undefined names
+      ruff --format=github --select=E9,F63,F7,F82 --target-version=py37 .
+      # default set of ruff rules with GitHub Annotations
+      ruff --format=github --target-version=py37 .
 
   # Linters
 
