--- a/.github/actions/python/pytest/action.yaml
+++ b/.github/actions/python/pytest/action.yaml
@@ -47,12 +47,14 @@ runs:
       source ./.venv/bin/activate
 
   - name: Install dependencies
+    shell: bash
     run: |
       python -m pip install --upgrade pip
       pip install ruff pytest
       if [ -f ${{ inputs.requirements_file }} ]; then pip install -r ${{ inputs.requirements_file }}; fi
 
   - name: Lint with ruff
+    shell: bash
     run: |
       # stop the build if there are Python syntax errors or undefined names
       ruff --format=github --select=E9,F63,F7,F82 --target-version=py37 .
