--- a/.github/workflows/ci-nodejs.yaml
+++ b/.github/workflows/ci-nodejs.yaml
@@ -29,15 +29,15 @@ jobs:
           force_install_dependencies: false
           package_json_path: ./poc/npm-test
 
-  slack:
-    needs: [continuous-integration]
-    runs-on: ubuntu-20.04
-    if: always()
-    steps:
-      - name: Send slack message
-        uses: zmynx/github-actions/.github/actions/shared/send-slack-message@feature/gha
-        with:
-          result: ${{ needs.continuous-integration.result }}
-          title: "CI result:"
-          channel: spikerz-pipline
-          slack_webhook: ${{ secrets.SLACK_WEBHOOK_PROD }}
+  # slack:
+  #   needs: [continuous-integration]
+  #   runs-on: ubuntu-20.04
+  #   if: always()
+  #   steps:
+  #     - name: Send slack message
+  #       uses: zmynx/github-actions/.github/actions/shared/send-slack-message@feature/gha
+  #       with:
+  #         result: ${{ needs.continuous-integration.result }}
+  #         title: "CI result:"
+  #         channel: "prod"
+  #         slack_webhook: ${{ secrets.SLACK_WEBHOOK_PROD }}
