--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,27 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "." # Location of package manifests
-    schedule:
-      interval: "weekly"
+- package-ecosystem: "github-actions" # See documentation for possible values
+  directory: "/" # Location of package manifests
+  schedule:
+    interval: "weekly"
+
+- package-ecosystem: "npm"
+  directory: "/poc/npm-test"
+  schedule:
+    interval: "weekly"
+
+- package-ecosystem: "docker"
+  directory: "/"
+  schedule:
+    interval: "weekly"
+
+- package-ecosystem: "pip"
+  directory: "/poc/pytest"
+  schedule:
+    interval: "weekly"
+
+- package-ecosystem: "terraform"
+  directory: "/"
+  schedule:
+    interval: "weekly"
