--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -23,7 +23,7 @@ jobs:
   ci:
     needs: [check]
     name: continuous integration
-    uses: zmynx/github-actions/.github/workflows/ci.yaml@feature/gha
+    uses: zmynx/github-actions/.github/workflows/ci-pytest.yaml@feature/gha
     secrets: inherit
 
   cd:
