--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -23,6 +23,6 @@ jobs:
         uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/python/pytest@feature/gha
         with:
           requirements_file: ./poc/pytest/requirements.txt
-  check2:
-    name: Call reusable workflow
-    uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/workflows/ci-pytest.yaml@feature/gha
+  # check2:
+  #   name: Call reusable workflow
+  #   uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/workflows/ci-pytest.yaml@feature/gha
