--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,16 +13,20 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: check if PR is merged
-        uses: ${{ format('{0}/{1}/.github/actions/git/check-merge@{2}' vars.ORG_NAME,  vars.REPO_NAME, vars.REF) }}
-
-      - name: check if PR is merged
-        uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/git/check-merge@${{ vars.REF}}
-
-      - name: Call another action
-        uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/python/pytest@feature/gha
+      - uses: jenseng/dynamic-uses@v1
         with:
-          requirements_file: ./poc/pytest/requirements.txt
+          # now you can use expressions 🥳
+          uses: ${{ format('{0}/{1}/.github/actions/git/check-merge@{2}' vars.ORG_NAME,  vars.REPO_NAME, vars.REF) }}
+          # # the `with` needs to be converted to a valid json string
+          # with: '{ "node-version": 18 }'
+
+      # - name: check if PR is merged
+      #   uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/git/check-merge@${{ vars.REF}}
+
+      # - name: Call another action
+      #   uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/python/pytest@feature/gha
+      #   with:
+      #     requirements_file: ./poc/pytest/requirements.txt
   # check2:
   #   name: Call reusable workflow
   #   uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/workflows/ci-pytest.yaml@feature/gha
