dynamic-uses v1, vars, format

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,7 +7,7 @@ jobs:
   check:
     name: check pr status
     runs-on: ubuntu-22.04
-    env:
+    vars:
       ORG_NAME: zMynxx
       REPO_NAME: github-actions
       REF: feature/gha
@@ -20,18 +20,18 @@ jobs:
       - uses: jenseng/dynamic-uses@v1
         with:
           # now you can use expressions 🥳
-          # uses: ${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/.github/actions/git/check-merge@${{ env.REF}}
-          uses: ${{ format('{0}/{1}/.github/actions/git/check-merge@{2}', env.ORG_NAME,  env.REPO_NAME, env.REF) }}
+          # uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/git/check-merge@${{ vars.REF}}
+          uses: ${{ format('{0}/{1}/.github/actions/git/check-merge@{2}', vars.ORG_NAME,  vars.REPO_NAME, vars.REF) }}
           # # the `with` needs to be converted to a valid json string
           # with: '{ "node-version": 18 }'
 
       # - name: check if PR is merged
-      # uses: ${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/.github/actions/git/check-merge@${{ env.REF}}
+      # uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/git/check-merge@${{ vars.REF}}
 
       # - name: Call another action
-      #   uses: ${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/.github/actions/python/pytest@feature/gha
+      #   uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/python/pytest@feature/gha
       #   with:
       #     requirements_file: ./poc/pytest/requirements.txt
   # check2:
   #   name: Call reusable workflow
-  #   uses: ${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/.github/workflows/ci-pytest.yaml@feature/gha
+  #   uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/workflows/ci-pytest.yaml@feature/gha
