--- a/.github/workflows/super-linter/actionlint.yaml
+++ b/.github/workflows/super-linter/actionlint.yaml
@@ -1,6 +1,6 @@
-self-hosted-runner:
-  # Labels of self-hosted runner in array of strings.
-  labels: []
+# self-hosted-runner:
+#   # Labels of self-hosted runner in array of strings.
+#   labels: []
 # Configuration variables in array of strings defined in your repository or
 # organization. `null` means disabling configuration variables check.
 # Empty array means no configuration variable is allowed.
