--- a/.github/workflows/terragrunt/destroy.yaml
+++ b/.github/workflows/terragrunt/destroy.yaml
@@ -12,11 +12,11 @@ env:
 
 jobs:
   plan:
-    needs: [check]
     name: plan
     uses: zmynx/github-actions/.github/workflows/terragrunt/plan.yaml@feature/gha
-
+    
   destroy:
+    needs: [plan]
     permissions:
       id-token: write
       contents: read
