--- a/.github/workflows/dynamic-uses.yaml
+++ b/.github/workflows/dynamic-uses.yaml
@@ -1,7 +1,6 @@
 name: Test dynamic uses
 on:
   workflow_dispatch:
-  push:
 
 jobs:
   check:
@@ -21,13 +20,11 @@ jobs:
           # # the `with` needs to be converted to a valid json string
           # with: '{ "node-version": 18 }'
 
-      # - name: check if PR is merged
-      # uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/git/check-merge@${{ vars.REF}}
+      - uses: jenseng/dynamic-uses@v1
+        with:
+          uses: ${{ format('{0}/{1}/.github/actions/python/pytest@{2}', vars.ORG_NAME,  vars.REPO_NAME, vars.REF) }}
+          with: '{ "requirements_file": "./poc/pytest/requirements.txt" }'
 
-      # - name: Call another action
-      #   uses: ${{ vars.ORG_NAME }}/${{ vars.REPO_NAME }}/.github/actions/python/pytest@feature/gha
-      #   with:
-      #     requirements_file: ./poc/pytest/requirements.txt
-  check2:
-    name: Call reusable workflow
-    uses: ${{format('{0}/{1}/.github/workflows/ci-pytest.yaml@{2}',vars.ORG_NAME,vars.REPO_NAME,vars.REF)}}
+  # check2:
+  #   name: Call reusable workflow
+  #   uses: ${{format('{0}/{1}/.github/workflows/ci-pytest.yaml@{2}',vars.ORG_NAME,vars.REPO_NAME,vars.REF)}}
