--- a/.github/workflows/super-linter/super-linter.yaml
+++ b/.github/workflows/super-linter/super-linter.yaml
@@ -1,4 +1,3 @@
----
 #################################
 #################################
 ## Super Linter GitHub Actions ##
@@ -11,10 +10,8 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches-ignore: [master, main]
-    # Remove the line above to run when pushing to master or main
   pull_request:
-    branches: [master, main]
+    - main
 
 ###############
 # Set the Job #
@@ -24,7 +21,7 @@ jobs:
     # Name the Job
     name: Lint Code Base
     # Set the agent to run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     ############################################
     # Grant status permission for MULTI_STATUS #
