added manual trigger for testing

--- a/.github/workflows/sounarqube.yaml
+++ b/.github/workflows/sounarqube.yaml
@@ -1,5 +1,6 @@
 name: SonarQube scan
 on:
+  workflow_dispatch:
   # Trigger analysis when pushing to your main branches, and when creating a pull request.
   push:
     branches:
