--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -10,7 +10,7 @@ name: Lint Code Base
 #############################
 on:
   workflow_dispatch:
-  push:
+  # push:
   pull_request:
     branches:
       - main
