only manual trigger, had auto analysis enabled

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -29,9 +29,10 @@
 name: SonarCloud analysis
 
 on:
-  pull_request:
-    branches:
-      - main
+  # Turned off after verified that it works
+  # pull_request:
+  #   branches:
+  #     - main
   workflow_dispatch:
 
 permissions:
