--- a/.github/workflows/terrascanner.yml
+++ b/.github/workflows/terrascanner.yml
@@ -31,3 +31,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2.21.4
         with:
           sarif_file: terrascan.sarif
+          category: terrascan
