removed actionlint config

--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -56,6 +56,6 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_ACTIONS_CONFIG_FILE: .github/workflows/super-linter/actionlint.yaml
+          # GITHUB_ACTIONS_CONFIG_FILE: .github/workflows/super-linter/actionlint.yaml
           ## This allows for pipelines to pass on linter errors
           #   DISABLE_ERRORS: true
