PR body env as actionslist suggests

--- a/.github/workflows/cd-non-prod.yaml
+++ b/.github/workflows/cd-non-prod.yaml
@@ -87,8 +87,9 @@ jobs:
       - name: Downcase PR body
         id: downcase
         shell: bash
+        env:
+          PR_BODY: ${{ github.event.pull_request.body }}
         run: |
-          PR_BODY="${{ github.event.pull_request.body }}"
           echo "pr_body_lowercase=${PR_BODY,,}" >> $GITHUB_OUTPUT
 
       - name: Publish to ECR
