--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -12,8 +12,7 @@ on:
   workflow_dispatch:
   push:
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 ###############
 # Set the Job #
