--- a/.github/workflows/tg-plan.yaml
+++ b/.github/workflows/tg-plan.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN_PROD }}
           role-session-name: GitHub-Actions-OIDC
           role-duration-seconds: 1700
           aws-region: ${{ vars.AWS_REGION }}
@@ -71,7 +71,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN_PROD }}
           role-session-name: GitHub-Actions-OIDC
           role-duration-seconds: 1700
           aws-region: ${{ vars.AWS_REGION }}
